@@ -7,7 +7,7 @@ use lib qw(t/lib);
 eval 'use TestUA';
 plan skip_all => 'LWP::UserAgent 5.819 required' if $@;
 
-plan tests => 3;
+plan tests => 5;
 
 use Net::Twitter;
 
@@ -35,3 +35,8 @@ is     $args{q}, $search_term, "param q has search term";
 # additional args in a HASH ref
 $r = $nt->search($search_term, { page => 2 });
 is $args{page}, 2, "page parameter set";
+
+like $request->uri, qr(/search.twitter.com/), 'search endpoint';
+
+$nt->trends;
+like $request->uri, qr(/api.twitter.com/1/), 'trends endpoint';
